examples/errors/returns4.spl
foo(): Void {return 3;}

main() {return;}